[gd_scene load_steps=20 format=3 uid="uid://3fv7cojyohqq"]

[ext_resource type="Script" uid="uid://ckxvg155corls" path="res://Scenes/Levels/LevelSelection.gd" id="1_0o5wr"]
[ext_resource type="StyleBox" uid="uid://bxxuvw3u47hhj" path="res://Resources/Texture/Button/ButtonNormal.tres" id="2_eqhlv"]
[ext_resource type="Texture2D" uid="uid://bkfytjrv1nfsb" path="res://Asset/Sprite/Ground/Ground-v2.png" id="2_o061i"]
[ext_resource type="PackedScene" uid="uid://cac7sq4vlj501" path="res://Scenes/Fade/fade.tscn" id="2_sg2c8"]
[ext_resource type="StyleBox" uid="uid://b1415tteok2jy" path="res://Resources/Texture/Button/ButtonPressed.tres" id="3_bp6eg"]
[ext_resource type="PackedScene" uid="uid://bogdb2py0tcfc" path="res://Scenes/UI/CursorMagnifyingGlass.tscn" id="3_o3fsi"]
[ext_resource type="PackedScene" uid="uid://cuoj3ka8bma1t" path="res://Scenes/UI/CursorNormal.tscn" id="4_b8uro"]
[ext_resource type="StyleBox" uid="uid://do5xtbv76wo0b" path="res://Resources/Texture/Button/ButtonHover.tres" id="4_o061i"]
[ext_resource type="Texture2D" uid="uid://b22vwex8m672y" path="res://Asset/Sprite/Cards/Object/card-pencil.png" id="5_bp6eg"]
[ext_resource type="FontFile" uid="uid://b4lfqjm4wfgf2" path="res://Asset/Font/VCR_OSD_MONO_1.001.ttf" id="10_5pwot"]
[ext_resource type="Texture2D" uid="uid://c4qngypr2gbtn" path="res://Asset/Sprite/Cards/Object/card-pen.png" id="11_tp4t1"]
[ext_resource type="Texture2D" uid="uid://bntq6lpoj34a5" path="res://Asset/Sprite/Cards/Object/card-pengserut.png" id="12_kaob2"]
[ext_resource type="Texture2D" uid="uid://cb8u7255mra3a" path="res://Asset/Sprite/Cards/Object/card-penghapus.png" id="13_8aj64"]
[ext_resource type="Texture2D" uid="uid://bphgic5ofte20" path="res://Asset/Sprite/Cards/Object/kertas 1.png" id="14_ds5p1"]
[ext_resource type="Texture2D" uid="uid://bsmh7nd8lndh" path="res://Asset/Sprite/Textures/PanelTexture.png" id="15_kaob2"]

[sub_resource type="Animation" id="Animation_kaob2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Level 1/Sprite:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.2617994]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Level 2/Sprite:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.2617994]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Level 3/Sprite:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.2617994]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Level 4/Sprite:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.2617994]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Level 5/Sprite:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.2617994]
}

[sub_resource type="Animation" id="Animation_tp4t1"]
resource_name = "loop"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Level 1/Sprite:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.17453292519943295, -0.17453292519943295, 0.17453292519943295]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Level 2/Sprite:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.17453292519943295, -0.17453292519943295, 0.17453292519943295]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Level 3/Sprite:rotation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.17453292519943295, -0.17453292519943295, 0.17453292519943295]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Level 4/Sprite:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.17453292519943295, -0.17453292519943295, 0.17453292519943295]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Level 5/Sprite:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1, 2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.17453292519943295, -0.17453292519943295, 0.17453292519943295]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8aj64"]
_data = {
&"RESET": SubResource("Animation_kaob2"),
&"loop": SubResource("Animation_tp4t1")
}

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8aj64"]
texture = ExtResource("15_kaob2")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0
region_rect = Rect2(0, 0, 32, 32)

[node name="LevelSelection" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_0o5wr")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(288, 168)
scale = Vector2(1.3, 1.3)
texture = ExtResource("2_o061i")

[node name="Fade" parent="." instance=ExtResource("2_sg2c8")]

[node name="Cursor" type="CanvasLayer" parent="."]
layer = 500

[node name="Magnifying Glass" parent="Cursor" instance=ExtResource("3_o3fsi")]
visible = false
position = Vector2(-128, -128)

[node name="CursorNormal" parent="Cursor" instance=ExtResource("4_b8uro")]
position = Vector2(288, 168)

[node name="Back" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = -44.0
offset_right = 120.0
offset_bottom = -13.0
grow_vertical = 0
focus_mode = 0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("10_5pwot")
theme_override_styles/normal = ExtResource("2_eqhlv")
theme_override_styles/pressed = ExtResource("3_bp6eg")
theme_override_styles/hover = ExtResource("4_o061i")
text = "Back"

[node name="Level 1" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -24.0
offset_top = -130.0
offset_right = 24.0
offset_bottom = -62.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.2, 1.2)
pivot_offset = Vector2(24, 34)
focus_mode = 0
flat = true

[node name="Sprite" type="Sprite2D" parent="Level 1"]
position = Vector2(24, 34)
rotation = -0.2617994
texture = ExtResource("5_bp6eg")

[node name="Level 2" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 72.0
offset_top = -42.0
offset_right = 120.0
offset_bottom = 26.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.2, 1.2)
pivot_offset = Vector2(24, 34)
focus_mode = 0
flat = true

[node name="Sprite" type="Sprite2D" parent="Level 2"]
position = Vector2(24, 34)
rotation = -0.2617994
texture = ExtResource("11_tp4t1")

[node name="Level 3" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 40.0
offset_top = 70.0
offset_right = 88.0
offset_bottom = 138.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.2, 1.2)
pivot_offset = Vector2(24, 34)
focus_mode = 0
flat = true

[node name="Sprite" type="Sprite2D" parent="Level 3"]
position = Vector2(24, 34)
rotation = -0.2617994
texture = ExtResource("12_kaob2")

[node name="Level 4" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -88.0
offset_top = 70.0
offset_right = -40.000015
offset_bottom = 138.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.2, 1.2)
pivot_offset = Vector2(24, 34)
focus_mode = 0
flat = true

[node name="Sprite" type="Sprite2D" parent="Level 4"]
position = Vector2(24, 34)
rotation = -0.2617994
texture = ExtResource("13_8aj64")

[node name="Level 5" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -119.999985
offset_top = -41.999992
offset_right = -71.999985
offset_bottom = 26.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.2, 1.2)
pivot_offset = Vector2(24, 34)
focus_mode = 0
flat = true

[node name="Sprite" type="Sprite2D" parent="Level 5"]
position = Vector2(24, 34)
rotation = -0.2617994
texture = ExtResource("14_ds5p1")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_8aj64")
}
autoplay = "loop"

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = -130.0
offset_right = 152.0
offset_bottom = -98.0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_8aj64")

[node name="RichTextLabel" type="RichTextLabel" parent="Panel"]
layout_mode = 0
offset_left = 64.0
offset_top = 8.0
offset_right = 330.66666
offset_bottom = 30.857147
scale = Vector2(0.6, 0.6)
theme_override_fonts/normal_font = ExtResource("10_5pwot")
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true
text = "Level Selection"
vertical_alignment = 1

[connection signal="button_down" from="Back" to="." method="_on_back_button_down"]
[connection signal="mouse_entered" from="Back" to="." method="_on_back_mouse_entered"]
[connection signal="button_down" from="Level 1" to="." method="_on_level_1_button_down"]
[connection signal="mouse_entered" from="Level 1" to="." method="_on_level_1_mouse_entered"]
[connection signal="mouse_exited" from="Level 1" to="." method="_on_level_1_mouse_exited"]
[connection signal="button_down" from="Level 2" to="." method="_on_level_2_button_down"]
[connection signal="mouse_entered" from="Level 2" to="." method="_on_level_2_mouse_entered"]
[connection signal="mouse_exited" from="Level 2" to="." method="_on_level_2_mouse_exited"]
[connection signal="button_down" from="Level 3" to="." method="_on_level_3_button_down"]
[connection signal="mouse_entered" from="Level 3" to="." method="_on_level_3_mouse_entered"]
[connection signal="mouse_exited" from="Level 3" to="." method="_on_level_3_mouse_exited"]
[connection signal="button_down" from="Level 4" to="." method="_on_level_4_button_down"]
[connection signal="mouse_entered" from="Level 4" to="." method="_on_level_4_mouse_entered"]
[connection signal="mouse_exited" from="Level 4" to="." method="_on_level_4_mouse_exited"]
[connection signal="button_down" from="Level 5" to="." method="_on_level_5_button_down"]
[connection signal="mouse_entered" from="Level 5" to="." method="_on_level_5_mouse_entered"]
[connection signal="mouse_exited" from="Level 5" to="." method="_on_level_5_mouse_exited"]
